--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -1,6 +1,7 @@
-<!DOCTYPE RCC>
-<RCC version="1.0">
+<RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>MButtonPage.qml</file>
+        <file>MOpenJs.js</file>
     </qresource>
 </RCC>
