新增循环滑动视图

--- a/xcontrols/qml/qml.qrc
+++ b/xcontrols/qml/qml.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/xcqml">
         <file>button/MPushButton.qml</file>
+        <file>view/MHorLoopView.qml</file>
+        <file>view/MVerLoopView.qml</file>
     </qresource>
 </RCC>
