1. 添加循环视图测试页面

--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>MButtonPage.qml</file>
         <file>MOpenJs.js</file>
+        <file>MLoopViewPage.qml</file>
     </qresource>
 </RCC>
